--- a/src/components/ActionModal/ActionModal.module.css
+++ b/src/components/ActionModal/ActionModal.module.css
@@ -92,7 +92,143 @@
 
 @media screen and (max-width: 800px) {
   .actionModalContainer {
-    opacity: 0;
-    pointer-events: none;
+    width: 480px;
+    height: 256px;
+  }
+
+  .titleScrollContainer {
+    margin-bottom: 22px;
+  }
+
+  .titleContainer {
+    font-size: 18px;
+    line-height: 26px;
+    padding-left: 26px;
+  }
+
+  .subTextContainer {
+    font-size: 13px;
+    margin-bottom: 40px;
+    padding-left: 26px;
+    line-height: 16px;
+  }
+
+  .bidForNftBtn {
+    padding: 16px;
+  }
+
+  .scrollToTopBtn {
+    height: 45px;
+    width: 30px;
+    margin-top: -1px;
+  }
+}
+
+@media screen and (max-width: 625px) {
+  .actionModalContainer {
+    width: 360px;
+    height: 192px;
+    padding: 22px 0 24px;
+  }
+
+  .titleScrollContainer {
+    margin-bottom: 18px;
+  }
+
+  .titleContainer {
+    font-size: 14px;
+    padding-left: 14px;
+    line-height: 20px;
+  }
+
+  .subTextContainer {
+    font-size: 10px;
+    margin-bottom: 20px;
+    padding-left: 14px;
+    line-height: 14px;
+  }
+
+  .bidForNftBtn {
+    padding: 10px;
+    font-size: 11px;
+  }
+
+  .scrollToTopBtn {
+    height: 36px;
+    width: 24px;
+    margin-top: -3px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .actionModalContainer {
+    width: 300px;
+    height: 152px;
+    padding: 18px 0;
+  }
+
+  .titleScrollContainer {
+    margin-bottom: 10px;
+  }
+
+  .titleContainer {
+    font-size: 11px;
+    padding-left: 14px;
+    line-height: 15px;
+  }
+
+  .subTextContainer {
+    font-size: 8px;
+    margin-bottom: 16px;
+    padding-left: 14px;
+    line-height: 12px;
+  }
+
+  .bidForNftBtn {
+    padding: 8px;
+    font-size: 9px;
+  }
+
+  .scrollToTopBtn {
+    height: 34px;
+    width: 21px;
+    margin-top: -3px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .actionModalContainer {
+    width: 280px;
+    height: 144px;
+    padding: 18px 0;
+  }
+
+  .titleScrollContainer {
+    margin-bottom: 10px;
+  }
+
+  .titleContainer {
+    font-size: 11px;
+    padding-left: 10px;
+    line-height: 15px;
+    padding-right: 8px;
+  }
+
+  .subTextContainer {
+    font-size: 8px;
+    margin-bottom: 14px;
+    padding-left: 10px;
+    line-height: 12px;
+  }
+
+  .bidForNftBtn {
+    padding: 6px;
+    font-size: 8px;
+  }
+
+  .scrollToTopBtn {
+    height: 32px;
+    width: 20px;
+    margin-top: -5px;
   }
 }
