--- a/src/components/ActionModal/ActionModal.module.css
+++ b/src/components/ActionModal/ActionModal.module.css
@@ -1,6 +1,6 @@
 .actionModalWrapper {
   position: fixed;
-  bottom: 36px;
+  bottom: 40px;
 }
 
 .actionModalContainer {
@@ -8,8 +8,8 @@
   flex-direction: column;
   padding: 32px 0 30px;
 
-  max-width: 640px;
-  max-height: 342px;
+  width: 646px;
+  height: 344px;
 
   background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -126,7 +126,7 @@
 
 @media screen and (max-width: 625px) {
   .actionModalContainer {
-    width: 360px;
+    width: 366px;
     height: 192px;
     padding: 22px 0 24px;
   }
@@ -162,24 +162,25 @@
 
 @media screen and (max-width: 450px) {
   .actionModalContainer {
-    width: 300px;
-    height: 152px;
-    padding: 18px 0;
+    width: 324px;
+    height: 178px;
+    padding: 20px 0;
   }
 
   .titleScrollContainer {
-    margin-bottom: 10px;
+    margin-bottom: 12px;
   }
 
   .titleContainer {
-    font-size: 11px;
+    max-width: calc(100% - 32px);
+    font-size: 14px;
     padding-left: 14px;
-    line-height: 15px;
+    line-height: 16px;
   }
 
   .subTextContainer {
-    font-size: 8px;
-    margin-bottom: 16px;
+    font-size: 10px;
+    margin-bottom: 20px;
     padding-left: 14px;
     line-height: 12px;
   }
@@ -198,37 +199,50 @@
 
 @media screen and (max-width: 360px) {
   .actionModalContainer {
-    width: 280px;
-    height: 144px;
+    width: 300px;
+    height: 170px;
     padding: 18px 0;
   }
 
   .titleScrollContainer {
-    margin-bottom: 10px;
+    margin-bottom: 12px;
   }
 
   .titleContainer {
-    font-size: 11px;
+    max-width: calc(100% - 32px);
+    font-size: 13px;
     padding-left: 10px;
-    line-height: 15px;
+    line-height: 16px;
     padding-right: 8px;
   }
 
   .subTextContainer {
-    font-size: 8px;
-    margin-bottom: 14px;
+    font-size: 9px;
+    margin-bottom: 18px;
     padding-left: 10px;
     line-height: 12px;
   }
 
   .bidForNftBtn {
     padding: 6px;
-    font-size: 8px;
+    font-size: 9px;
   }
 
   .scrollToTopBtn {
     height: 32px;
     width: 20px;
     margin-top: -5px;
+  }
+}
+
+/* @media screen and (max-height: 1080px) {
+  .actionModalWrapper {
+    bottom: 300px;
+  }
+} */
+
+@media screen and (max-height: 900px) {
+  .actionModalWrapper {
+    bottom: 80px;
   }
 }
